Updated with explanatory comments

--- a/Udemy Course Data Analyst Exercises/Cluster Analysis/Cluster Analysis - Basics.ipynb
+++ b/Udemy Course Data Analyst Exercises/Cluster Analysis/Cluster Analysis - Basics.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basics of Cluster Analysis"
+    "### Basics of Cluster Analysis - Clustering Countries based on traits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,12 +18,30 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set()\n",
-    "from sklearn.cluster import KMeans"
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "# Pandas library is used for importing various file types e.g. csv, excel, json.\n",
+    "# also used for manipulation and cleaning dataframes.\n",
+    "\n",
+    "# Numpy library has functions used for working with arrays and matrices\n",
+    "# faster, clearer and better quality code using Numpy\n",
+    "\n",
+    "# Matplotlib is a 2D plotting library for visualising data in Python\n",
+    "\n",
+    "# Seaborn is used for improving Matplotlib visualisations to make them more visually attractive.\n",
+    "# It builds on top of MatPlotLib and works with Pandas for data structures\n",
+    "\n",
+    "# SKLearn (formerly called SciKitLearn) is one of the most useful libraries for ML (Machine Learning)\n",
+    "# It contains tools for statistical modelling including classification, regression, clustering and dimensionality reduction.\n",
+    "# It is built on top of Numpy, Scipy and Matplotlib\n",
+    "\n",
+    "# KMeans is a clustering method that separates data into clusters with observations belonging to the cluster with\n",
+    "# the nearest mean on a Euclidean scale. In Python it is a module used within the library SKLearn."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,13 +137,14 @@
        "5  Australia    -25.45     133.11  English"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data\n",
+    "# importing and displaying the data from a csv file"
    ]
   },
   {
@@ -137,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +174,8 @@
     "plt.scatter(data['Longitude'], data['Latitude'])\n",
     "plt.xlim(-180,180)\n",
     "plt.ylim(-90,90)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "# plotting the data using MatPlotLib library"
    ]
   },
   {
@@ -167,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -249,13 +269,14 @@
        "5    -25.45     133.11"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x"
+    "x\n",
+    "# Selecting the feature we want to base our clusters on (in this case longitude and latitude)"
    ]
   },
   {
@@ -267,16 +288,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kmeans = KMeans(3)     # the k value (in brackets) is number of clusters we want to make"
+    "kmeans = KMeans(3)     # the k value (in brackets) is number of clusters we want to make (can be changed and re-run later)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +306,7 @@
        "KMeans(n_clusters=3)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,28 +324,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 2, 2, 2, 1])"
+       "array([0, 0, 1, 1, 1, 2])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "identified_clusters = kmeans.fit_predict(x)\n",
-    "identified_clusters            # 3 clusters found here (0, 1 and 2)"
+    "identified_clusters            # 3 clusters found here (0, 1 and 2)\n",
+    "# This clusters the data points into 3 based on the kmeans algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +400,7 @@
        "      <td>46.75</td>\n",
        "      <td>2.40</td>\n",
        "      <td>French</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -386,7 +408,7 @@
        "      <td>54.01</td>\n",
        "      <td>-2.53</td>\n",
        "      <td>English</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -394,7 +416,7 @@
        "      <td>51.15</td>\n",
        "      <td>10.40</td>\n",
        "      <td>German</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -402,7 +424,7 @@
        "      <td>-25.45</td>\n",
        "      <td>133.11</td>\n",
        "      <td>English</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -412,13 +434,13 @@
        "     Country  Latitude  Longitude Language  Cluster\n",
        "0        USA     44.97    -103.77  English        0\n",
        "1     Canada     62.40     -96.80  English        0\n",
-       "2     France     46.75       2.40   French        2\n",
-       "3         UK     54.01      -2.53  English        2\n",
-       "4    Germany     51.15      10.40   German        2\n",
-       "5  Australia    -25.45     133.11  English        1"
+       "2     France     46.75       2.40   French        1\n",
+       "3         UK     54.01      -2.53  English        1\n",
+       "4    Germany     51.15      10.40   German        1\n",
+       "5  Australia    -25.45     133.11  English        2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +448,8 @@
    "source": [
     "data_with_clusters = data.copy()\n",
     "data_with_clusters['Cluster'] = identified_clusters\n",
-    "data_with_clusters"
+    "data_with_clusters\n",
+    "# Identifies which countries are in which clusters"
    ]
   },
   {
@@ -449,7 +472,9 @@
     "plt.scatter(data_with_clusters['Longitude'], data_with_clusters['Latitude'], c=data_with_clusters['Cluster'], cmap='rainbow')\n",
     "plt.xlim(-180,180)\n",
     "plt.ylim(-90,90)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Using matplotlib to visualise the countries in their clusters"
    ]
   },
   {
