updated with explanatory comments

--- a/Udemy Course Data Analyst Exercises/Cluster Analysis/Cluster Analysis - Heatmaps Visuals using Seaborn.ipynb
+++ b/Udemy Course Data Analyst Exercises/Cluster Analysis/Cluster Analysis - Heatmaps Visuals using Seaborn.ipynb
@@ -9,7 +9,18 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "# Pandas library is used for importing various file types e.g. csv, excel, json.\n",
+    "# also used for manipulation and cleaning dataframes.\n",
+    "\n",
+    "# Numpy library has functions used for working with arrays and matrices\n",
+    "# faster, clearer and better quality code using Numpy\n",
+    "\n",
+    "# Matplotlib is a 2D plotting library for visualising data in Python\n",
+    "\n",
+    "# Seaborn is used for improving Matplotlib visualisations to make them more visually attractive.\n",
+    "# It builds on top of MatPlotLib and works with Pandas for data structures"
    ]
   },
   {
@@ -19,8 +30,8 @@
    "outputs": [],
    "source": [
     "data = pd.read_csv('Country+clusters+standardized.csv', index_col='Country')\n",
-    "\n",
-    "# the part at the end loads the csv file as a data frame which specifies a given column from the csv as the index of the dataframe"
+    "# imports the data from the csv as a dataframe\n",
+    "# end part loads the csv specifying a column (country) as the index of the dataframe"
    ]
   },
   {
@@ -30,7 +41,8 @@
    "outputs": [],
    "source": [
     "x_scaled = data.copy()\n",
-    "x_scaled = x_scaled.drop(['Language'],axis=1)"
+    "x_scaled = x_scaled.drop(['Language'],axis=1)\n",
+    "# removes the column 'Language' from the dataframe"
    ]
   },
   {
@@ -120,7 +132,8 @@
     }
    ],
    "source": [
-    "x_scaled"
+    "x_scaled\n",
+    "# displays the data"
    ]
   },
   {
@@ -152,7 +165,9 @@
     }
    ],
    "source": [
-    "sns.clustermap(x_scaled, cmap='mako')"
+    "sns.clustermap(x_scaled, cmap='mako')\n",
+    "# the seaborn library is used here to build a cluster map of the dataframe in the colour palette 'mako'\n",
+    "# to help identify similarities and differences between countries."
    ]
   },
   {
@@ -160,7 +175,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# we can see that USA and Canada are similar based on longitude but differ slightly in latitude\n",
+    "# UK and France have very similar longitude but differ slightly in latitude\n",
+    "# Australia differs greatly in both longitude and latitude from all other countries in the data"
+   ]
   }
  ],
  "metadata": {
