updated with explanatory comments

--- a/Udemy Course Data Analyst Exercises/Cluster Analysis/Cluster Analysis - Market Segmentation Example.ipynb
+++ b/Udemy Course Data Analyst Exercises/Cluster Analysis/Cluster Analysis - Market Segmentation Example.ipynb
@@ -1,17 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clustering Customers based on Satisfaction and Loyalty"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set()\n",
-    "from sklearn.cluster import KMeans"
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "# Pandas library is used for importing various file types e.g. csv, excel, json.\n",
+    "# also used for manipulation and cleaning dataframes.\n",
+    "\n",
+    "# Numpy library has functions used for working with arrays and matrices\n",
+    "# faster, clearer and better quality code using Numpy\n",
+    "\n",
+    "# Matplotlib is a 2D plotting library for visualising data in Python\n",
+    "\n",
+    "# Seaborn is used for improving Matplotlib visualisations to make them more visually attractive.\n",
+    "# It builds on top of MatPlotLib and works with Pandas for data structures\n",
+    "\n",
+    "# SKLearn (formerly called SciKitLearn) is one of the most useful libraries for ML (Machine Learning)\n",
+    "# It contains tools for statistical modelling including classification, regression, clustering and dimensionality reduction.\n",
+    "# It is built on top of Numpy, Scipy and Matplotlib\n",
+    "\n",
+    "# KMeans is a clustering method that separates data into clusters with observations belonging to the cluster with\n",
+    "# the nearest mean on a Euclidean scale. In Python it is a module used within the library SKLearn."
    ]
   },
   {
@@ -248,7 +275,8 @@
     }
    ],
    "source": [
-    "data"
+    "data\n",
+    "# importing and displaying the data from a csv file"
    ]
   },
   {
@@ -256,7 +284,7 @@
    "metadata": {},
    "source": [
     "### Plot the data\n",
-    "### Satisfaction self-reported (discrete data)\n",
+    "### Satisfaction self-reported (discrete data ranging from 1 to 10)\n",
     "### Loyalty measured by purchases made + other factors (Continuous data)"
    ]
   },
@@ -289,7 +317,8 @@
    "source": [
     "plt.scatter(data['Satisfaction'], data['Loyalty'])\n",
     "plt.xlabel('Satisfaction')\n",
-    "plt.ylabel('Loyalty')"
+    "plt.ylabel('Loyalty')\n",
+    "# using matplotlib to visualise the data of loyalty and satisfaction levels"
    ]
   },
   {
@@ -333,7 +362,8 @@
    ],
    "source": [
     "kmeans = KMeans(2)\n",
-    "kmeans.fit(x)"
+    "kmeans.fit(x)\n",
+    "# the k value (in brackets) is number of clusters we want to make"
    ]
   },
   {
@@ -351,7 +381,7 @@
    "source": [
     "clusters = x.copy()\n",
     "clusters['cluster_pred']=kmeans.fit_predict(x)\n",
-    "# Cluster_pred will contain the predictions"
+    "# Cluster_pred will contain the predictions by the algorithm of how the customers will be clustered"
    ]
   },
   {
@@ -383,7 +413,8 @@
    "source": [
     "plt.scatter(clusters['Satisfaction'],clusters['Loyalty'],c=clusters['cluster_pred'],cmap='rainbow')\n",
     "plt.xlabel('Satisfaction')\n",
-    "plt.ylabel('Loyalty')"
+    "plt.ylabel('Loyalty')\n",
+    "# Using matplotlib to visualise the customers in their clusters using the 'rainbow' colour palette"
    ]
   },
   {
@@ -392,9 +423,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clustering here has clustered the data by satisfaction > or < 6\n",
+    "# Clustering here has clustered the data by satisfaction being greater or less than 6.\n",
     "# The problem is that the algorithm ONLY considered satisfaction as a feature as the Loyalty values are much smaller\n",
-    "# Why? We have not standardised the variable! We need to standardise the 'satisfaction' variable to give it equal weight\n",
+    "\n",
+    "# To fix this we can standardise the 'satisfaction' variable to give it equal weight\n",
     "# as the other variable (loyalty)"
    ]
   },
@@ -402,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Standardising the variables"
+    "### Standardising the variables to give equal weight to 'Satisfaction' and 'Loyalty'"
    ]
   },
   {
@@ -453,7 +485,8 @@
    "source": [
     "from sklearn import preprocessing\n",
     "x_scaled = preprocessing.scale(x)\n",
-    "# .scale is a method which scales each variable seperately, each column will be standardised with respect to itself\n",
+    "# preprocessing.scale is a method from the sklearn library which scales each variable separately,\n",
+    "# each column will be standardised with respect to itself\n",
     "# now 'x_scaled' contains the standardised 'satisfaction' and the same values for loyalty (as loyalty was already standardised)\n",
     "x_scaled"
    ]
@@ -497,6 +530,8 @@
     "    wcss.append(kmeans.inertia_)\n",
     "    \n",
     "# as range is from 1-10 we will only get 9 cluster solutions (arbitrary decision)\n",
+    "# the elbow method is used to find the optimal number of clusters to put data in\n",
+    "\n",
     "\n",
     "wcss"
    ]
@@ -530,7 +565,8 @@
    "source": [
     "plt.plot(range(1, 10), wcss)\n",
     "plt.xlabel('Numer of clusters')\n",
-    "plt.ylabel('WCSS')"
+    "plt.ylabel('WCSS')\n",
+    "# using the matplotlib library to plot a graph of the elbow method."
    ]
   },
   {
@@ -549,7 +585,9 @@
     "kmeans_new = KMeans(4)\n",
     "kmeans_new.fit(x_scaled)\n",
     "clusters_new = x.copy()\n",
-    "clusters_new['cluster_pred'] = kmeans_new.fit_predict(x_scaled)"
+    "clusters_new['cluster_pred'] = kmeans_new.fit_predict(x_scaled)\n",
+    "# it is difficult to say here where the optimal number of clusters are\n",
+    "# it looks like after 4 clusters the reduction of the WCSS drops the most so we will use this"
    ]
   },
   {
@@ -840,23 +878,23 @@
     }
    ],
    "source": [
-    "# we will plot the data without standardising it but the solution itself will be the standardised one\n",
     "plt.scatter(clusters_new['Satisfaction'],clusters_new['Loyalty'],c=clusters_new['cluster_pred'],cmap='rainbow')\n",
     "plt.xlabel('Satisfaction')\n",
-    "plt.ylabel('Loyalty')"
+    "plt.ylabel('Loyalty')\n",
+    "# we will plot the data without standardising it but the solution itself will be the standardised one\n",
+    "# Using matplotlib to visualise the customers in their clusters using the 'rainbow' colour palette"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# after changing the Kmeans cluster number many times trying 2, 3 and finally 4\n",
-    "# 4 clusters here, they should be named\n",
-    "# low satisfaciton and loyalty we'll call Alienated Cluster, high loyalty but low satisfaction we'll call Supporter Cluster\n",
-    "# the high satisfaction and loyalty we'll call Fan Cluster, and finally high satisfaction but low loyalty we'll call\n",
-    "# Roamers (they like the brand but aren't loyal to it)"
+    "#### After changing the Kmeans cluster number many times trying 2, 3 and finally 4\n",
+    "#### 4 clusters here seem the best option as it includes a large difference between clusters while keeping in-cluster similarity high\n",
+    "#### Identifying the clusters with names:\n",
+    "#### Low satisfaciton and loyalty we'll call \"Alienated Cluster\", high loyalty but low satisfaction we'll call \"Supporter Cluster\"\n",
+    "#### the high satisfaction and loyalty we'll call \"Fan Cluster\", and finally high satisfaction but low loyalty we'll call\n",
+    "#### \"Roamers\" (they like the brand but aren't loyal to it)"
    ]
   }
  ],
