updated explanatory notes

--- a/Udemy Course Data Analyst Exercises/Linear Regression (with SKlearn)/Multiple Linear Regression - R2, Adj R2 and Feature Selection.ipynb
+++ b/Udemy Course Data Analyst Exercises/Linear Regression (with SKlearn)/Multiple Linear Regression - R2, Adj R2 and Feature Selection.ipynb
@@ -6,13 +6,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set()\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "# importing the relevant packages"
+    "\n",
+    "# Pandas library is used for importing various file types e.g. csv, excel, json.\n",
+    "# also used for manipulation and cleaning dataframes.\n",
+    "\n",
+    "# Numpy library has functions used for working with arrays and matrices\n",
+    "# faster, clearer and better quality code using Numpy\n",
+    "\n",
+    "# Matplotlib is a 2D plotting library for visualising data in Python\n",
+    "\n",
+    "# Seaborn is used for improving Matplotlib visualisations to make them more visually attractive.\n",
+    "# It builds on top of MatPlotLib and works with Pandas for data structures\n",
+    "\n",
+    "# sklearn is a library used for machine learning and statistical modeling.\n",
+    "# it includes many tools for classification, regression, clustering and dimensionality reduction"
    ]
   },
   {
@@ -97,7 +110,9 @@
    ],
    "source": [
     "data = pd.read_csv(\"1.02.+Multiple+linear+regression.csv\")\n",
-    "data.head()"
+    "data.head()\n",
+    "\n",
+    "# importing and displaying data the csv file"
    ]
   },
   {
@@ -209,7 +224,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating the Multiple Linear Regression"
+    "## Multiple Linear Regression"
    ]
   },
   {
@@ -218,9 +233,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First, declare the dependant and independant variables\n",
     "x = data[['SAT','Rand 1,2,3']]\n",
-    "y = data['GPA']"
+    "y = data['GPA']\n",
+    "\n",
+    "# First, declare the dependant (SAT, Rand 1,2,3) and independant variables (GPA)"
    ]
   },
   {
@@ -240,9 +256,10 @@
     }
    ],
    "source": [
-    "# Regression itself\n",
     "reg = LinearRegression()\n",
-    "reg.fit(x,y)"
+    "reg.fit(x,y)\n",
+    "\n",
+    "# storing and fitting the linear regression model to the data"
    ]
   },
   {
@@ -262,8 +279,10 @@
     }
    ],
    "source": [
-    "# Coefficient\n",
-    "reg.coef_ # in output below the first number refers to SAT and the 2nd refers to the Rand 123"
+    "reg.coef_ \n",
+    "\n",
+    "# in output below, the first number is coefficient of SAT and the second is the coef of Rand 123\n",
+    "# this is the constant that is multiplied by the variable"
    ]
   },
   {
@@ -283,17 +302,45 @@
     }
    ],
    "source": [
-    "# Intercept\n",
-    "reg.intercept_"
+    "reg.intercept_\n",
+    "\n",
+    "# the intercept is the point where the function crosses the y axis (the predicted value for y when x is 0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40668119528142843"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Calculating the R-Squared below"
+    "reg.score(x,y)\n",
+    "\n",
+    "#.score() returns the R-Squared of a linear regression (simple or multiple)\n",
+    "\n",
+    "# however, the Adjusted R-Squared is more appropriate for multiple linear regerssion\n",
+    "# as it adjusts for multiple variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Formula for Adjusted R^2\n",
+    "$R^2_{adj.} = 1 - (1-R^2)*\\frac{n-1}{n-p-1}$\n",
+    "###### n = 84 (number of observations) and p = 2 (the number of predictors)\n",
+    "\n",
+    "##### R-Squared is the universal measure for evaluating how well linear regressions perform"
    ]
   },
   {
@@ -304,7 +351,7 @@
     {
      "data": {
       "text/plain": [
-       "0.40668119528142843"
+       "(84, 2)"
       ]
      },
      "execution_count": 9,
@@ -313,19 +360,14 @@
     }
    ],
    "source": [
-    "# reg.score(x,y) can be used for both simple and multiple linear regression\n",
-    "reg.score(x,y) \n",
-    "# the score below is for the R-Squared regression, NOT the Adjusted R-Squared\n",
-    "# (Adjusted R is more appropriate for multiple regression as it adjusts for multiple variables)"
+    "x.shape"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Formula for Adjusted R^2\n",
-    "$R^2_{adj.} = 1 - (1-R^2)*\\frac{n-1}{n-p-1}$\n",
-    "###### n = 84 (number of observations) and p = 2 (the number of predictors)"
+    "### Calculating the R-Squared"
    ]
   },
   {
@@ -336,7 +378,7 @@
     {
      "data": {
       "text/plain": [
-       "(84, 2)"
+       "0.39203134825134023"
       ]
      },
      "execution_count": 10,
@@ -345,53 +387,27 @@
     }
    ],
    "source": [
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.39203134825134023"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "r2 = reg.score(x,y)\n",
+    "# variable storing the R-Squared value\n",
     "\n",
     "n = x.shape[0]\n",
+    "# the number of observations\n",
     "\n",
     "p = x.shape[1]\n",
+    "# the number of predictors (2)\n",
     "\n",
     "adjusted_r2 = 1-(1-r2)*(n-1)/(n-p-1)\n",
-    "adjusted_r2"
+    "adjusted_r2\n",
+    "# plugging in the variables into the R-Squared formula"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# the adjusted Rsquared is significantly lower than the Rsquared:\n",
-    "# therefore one or more of the predictors has little to no explanatory power"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# how do we know which predictor has little to no explanatory power? The Feature selection module!"
+    "#### We can conclude that the Adjusted R Squared (0.39) is significantly lower than R Squared (0.40)\n",
+    "#### Therefore one or more of the predictors has little to no explanatory power\n",
+    "#### To find out which predictor is the least important we use feature selection:"
    ]
   },
   {
@@ -402,30 +418,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature selection improves speed and prevents issues related to having too many features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Feature selection module simplifies models - very important in machine learning\n",
-    "# it improves speed and prevents issues related to having too many features\n",
+    "from sklearn.feature_selection import f_regression\n",
     "\n",
-    "# inside the module is f_regression which creates simple linear regressions of each feature and the dependant variable"
+    "# importing feature_selection module from sklearn library\n",
+    "# f_regression creates simple linear regressions of each feature (SAT, Rand 1,2,3) and the dependant variable (GPA)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import f_reg from feature selection inside SKlearn\n",
-    "from sklearn.feature_selection import f_regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -434,18 +447,19 @@
        "(array([56.04804786,  0.17558437]), array([7.19951844e-11, 6.76291372e-01]))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f_regression(x,y)"
+    "f_regression(x,y)\n",
+    "# applying the f_regression to the features (x) and target (y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -464,29 +478,20 @@
        "array([7.19951844e-11, 6.76291372e-01])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p_values = f_regression(x,y)[1]\n",
-    "p_values"
+    "p_values\n",
+    "# storing the p-values from the regression in the variable 'p_values'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# in output above e-11 is *10 to power of -11 OR divided by 10 to the power of 11\n",
-    "# e-1 *10 to the power of -1 OR divided by 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -495,22 +500,24 @@
        "array([0.   , 0.676])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p_values.round(3)"
+    "p_values.round(3)\n",
+    "# as the output is written in scientific notation, the p_values will be rounded to 3 digits"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# first p-value is the SAT and the 2nd is the Rand 123\n",
+    "# the first p_value (0.00) is of the SAT, the second p_value (0.676) is of the Rand 1,2,3\n",
+    "# p_values above 0.05 or 5% are not significant, whereas below 0.05 are significant\n",
     "# Therefore we know SAT is a useful variable whereas Rand 123 is useless"
    ]
   },
@@ -518,12 +525,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating a Summary Table with P-values"
+    "### Summary Table with P-values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -569,29 +576,31 @@
        "1  Rand 1,2,3"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "reg_summary = pd.DataFrame(data = x.columns.values, columns=['Features'])\n",
-    "reg_summary"
+    "reg_summary\n",
+    "# creating a table with the features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "reg_summary ['Coefficients'] = reg.coef_\n",
-    "reg_summary ['p-values'] = p_values.round(3)"
+    "reg_summary ['p-values'] = p_values.round(3)\n",
+    "# provides the table with the coefficient and p-values of the features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +652,7 @@
        "1  Rand 1,2,3     -0.008270     0.676"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,21 +662,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# P-values are one of the best ways to determine whether a variable is redundant\n",
-    "# We can see from here that Rand 123 is redundant"
+    "P-values help us determine whether a variable is significant or not, however not how useful it is"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
