updated explanatory notes

--- a/Udemy Course Data Analyst Exercises/Linear Regression (with SKlearn)/Multiple Linear Regression - Standardization (Feature Scaling).ipynb
+++ b/Udemy Course Data Analyst Exercises/Linear Regression (with SKlearn)/Multiple Linear Regression - Standardization (Feature Scaling).ipynb
@@ -11,7 +11,21 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "sns.set()\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "# Pandas library is used for importing various file types e.g. csv, excel, json.\n",
+    "# also used for manipulation and cleaning dataframes.\n",
+    "\n",
+    "# Numpy library has functions used for working with arrays and matrices\n",
+    "# faster, clearer and better quality code using Numpy\n",
+    "\n",
+    "# Matplotlib is a 2D plotting library for visualising data in Python\n",
+    "\n",
+    "# Seaborn is used for improving Matplotlib visualisations to make them more visually attractive.\n",
+    "# It builds on top of MatPlotLib and works with Pandas for data structures\n",
+    "\n",
+    "# sklearn is a library used for machine learning and statistical modeling.\n",
+    "# it includes many tools for classification, regression, clustering and dimensionality reduction"
    ]
   },
   {
@@ -96,7 +110,9 @@
    ],
    "source": [
     "data = pd.read_csv(\"1.02.+Multiple+linear+regression.csv\")\n",
-    "data.head()"
+    "data.head()\n",
+    "\n",
+    "# importing and displaying the data "
    ]
   },
   {
@@ -205,13 +221,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiple Linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = data[['SAT','Rand 1,2,3']]\n",
-    "y = data['GPA']"
+    "y = data['GPA']\n",
+    "\n",
+    "# declaring the dependant (GPA) and independant variables (SAT, Rand, 1,2,3)"
    ]
   },
   {
@@ -227,7 +252,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import StandardScaler # importing the feature scaling module"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# importing feature_selection module from sklearn library\n",
+    "# f_regression creates simple linear regressions of each feature (SAT, Rand 1,2,3) and the dependant variable (GPA)"
    ]
   },
   {
@@ -236,7 +264,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = StandardScaler() # this object will be used to scale data"
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# this object will be used to scale data (subtract the mean and divide by the standard deviation)"
    ]
   },
   {
@@ -256,7 +286,9 @@
     }
    ],
    "source": [
-    "scaler.fit(x)"
+    "scaler.fit(x)\n",
+    "\n",
+    "# fitting the scaler to the features, now the scaler contains all the standardisation info"
    ]
   },
   {
@@ -265,8 +297,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# transforming unscaled inputs using info in the scaler object (feature-wise)\n",
-    "x_scaled = scaler.transform(x)"
+    "x_scaled = scaler.transform(x)\n",
+    "\n",
+    "# transforming the inputs to scale them"
    ]
   },
   {
@@ -369,7 +402,9 @@
     }
    ],
    "source": [
-    "x_scaled # now all input data has been standardised"
+    "x_scaled\n",
+    "\n",
+    "# now all input data has been standardised"
    ]
   },
   {
@@ -397,7 +432,9 @@
    ],
    "source": [
     "reg = LinearRegression()\n",
-    "reg.fit(x_scaled,y)"
+    "reg.fit(x_scaled,y)\n",
+    "\n",
+    "# fits the scaled inputs and targets to the regression model"
    ]
   },
   {
@@ -417,7 +454,10 @@
     }
    ],
    "source": [
-    "reg.coef_"
+    "reg.coef_\n",
+    "\n",
+    "# in output below, the first number is coefficient of SAT and the second is the coef of Rand 123\n",
+    "# this is the constant that is multiplied by the variable"
    ]
   },
   {
@@ -437,14 +477,16 @@
     }
    ],
    "source": [
-    "reg.intercept_"
+    "reg.intercept_\n",
+    "\n",
+    "# the intercept is the point where the function crosses the y axis (the predicted value for y when x is 0)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a summary table"
+    "### Summary table"
    ]
   },
   {
@@ -455,9 +497,10 @@
    "source": [
     "reg_summary = pd.DataFrame([['Bias'],['SAT'],['Rand 1,2,3']], columns=['Features'])\n",
     "reg_summary['Weights'] = reg.intercept_, reg.coef_[0], reg.coef_[1]\n",
+    "\n",
     "# In ML context:\n",
-    "# 'weights' means coefficients - the bigger the weight the bigger the impact of the feature on the regression\n",
-    "# 'bias' means intercept"
+    "# 'weights' = coefficients - the bigger the weight the bigger the impact of the feature on the regression\n",
+    "# 'bias' = intercept"
    ]
   },
   {
@@ -591,7 +634,9 @@
    ],
    "source": [
     "new_data = pd.DataFrame(data=[[1700,2],[1800,1]], columns=['SAT', 'Rand 1,2,3'])\n",
-    "new_data"
+    "new_data\n",
+    "\n",
+    "# hypothetical new data, one with a SAT score of 1700, the other with 1800"
    ]
   },
   {
@@ -611,7 +656,9 @@
     }
    ],
    "source": [
-    "reg.predict(new_data)"
+    "reg.predict(new_data)\n",
+    "\n",
+    "# the results below are meaningless, the problem is the new data hasnt been standardised yet."
    ]
   },
   {
@@ -633,7 +680,9 @@
    ],
    "source": [
     "new_data_scaled = scaler.transform(new_data)\n",
-    "new_data_scaled"
+    "new_data_scaled\n",
+    "\n",
+    "# standardising the new data using the scalar object"
    ]
   },
   {
@@ -653,7 +702,9 @@
     }
    ],
    "source": [
-    "reg.predict(new_data_scaled)"
+    "reg.predict(new_data_scaled)\n",
+    "\n",
+    "# finally we can predict the GPA of the new scaled data"
    ]
   },
   {
@@ -682,7 +733,9 @@
    "source": [
     "reg_simple = LinearRegression()\n",
     "x_simple_matrix = x_scaled[:,0].reshape(-1,1)\n",
-    "reg_simple.fit(x_simple_matrix,y)"
+    "reg_simple.fit(x_simple_matrix,y)\n",
+    "\n",
+    "# making a new linear regression model with the scaled input data (SAT)"
    ]
   },
   {
@@ -702,24 +755,11 @@
     }
    ],
    "source": [
-    "reg_simple.predict(new_data_scaled[:,0].reshape(-1,1))"
+    "reg_simple.predict(new_data_scaled[:,0].reshape(-1,1))\n",
+    "\n",
+    "# fitting the regression to the new input data using only the SAT score, and leaving out the Rand 1,2,3\n",
+    "# the predicted GPA is slightly different but the same if rounded up to 2 digits (3.09 and 3.26)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# the predicted GPA is slightly different but exact same if rounded up to 2 digits (3.09 and 3.26)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
