--- a/Udemy Course Data Analyst Exercises/Linear Regression (with SKlearn)/Train and Test data (for Linear Regression Full Practical example).ipynb
+++ b/Udemy Course Data Analyst Exercises/Linear Regression (with SKlearn)/Train and Test data (for Linear Regression Full Practical example).ipynb
@@ -7,12 +7,26 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Numpy library has functions used for working with arrays and matrices\n",
+    "# faster, clearer and better quality code using Numpy\n",
+    "\n",
+    "# sklearn is a library used for machine learning and statistical modeling.\n",
+    "# it includes many tools for classification, regression, clustering and dimensionality reduction\n",
+    "# train test split is a module used for splitting data into training and testing variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generating data for splitting"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,19 +42,20 @@
        "        92,  93,  94,  95,  96,  97,  98,  99, 100])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a = np.arange(1,101)\n",
-    "a"
+    "a\n",
+    "# returns evenly spaced values within a given interval - outputs an ndarray"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +71,7 @@
        "       592, 593, 594, 595, 596, 597, 598, 599, 600])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,48 +85,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Splitting the Data"
+    "### Splitting the Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([18, 98, 49, 70, 27, 72, 48, 15, 53, 35, 77, 22, 51, 16, 29, 63, 30,\n",
-       "        42, 41, 60,  2,  9, 65, 71, 14, 20, 58, 31, 97, 11,  4, 82, 38, 81,\n",
-       "        37, 44, 76, 67, 23, 78, 73,  1, 86, 36, 87, 45, 88, 40, 21, 46, 62,\n",
-       "        57, 50,  7, 56, 93, 75, 85, 66, 47, 25, 61, 26, 68, 19, 52, 84,  3,\n",
-       "        80, 28, 92, 90, 94, 13, 10]),\n",
-       " array([ 64,  12,   5,  17,  39,  55,  43,  59,  34,  91,  69,   6,  95,\n",
-       "         83,   8,  33,  79, 100,  89,  54,  32,  96,  99,  74,  24])]"
+       "[array([ 60,  85,   2,  86,  33,  70,  20,  61,  89,  78,  98,  79,  53,\n",
+       "         35,  52,  21,  17,  47,  41,  32, 100,  73,  45,  25,  49,  92,\n",
+       "         19,  15,  38,  39,  29,  80,  14,  69,  13,  64,  31,  94,   4,\n",
+       "         37,  55,   6,   1,  76,  16,  75,  84,  12,  90,  40,  72,  83,\n",
+       "         26,   9,   3,  22,  43,  99,  59,  82,  97,  58,  77,   7,  66,\n",
+       "         28,  91,  74,  67,  50,  46,  88,  56,  18,  23]),\n",
+       " array([34, 54, 93, 63, 44, 42, 57, 27, 95, 87, 51, 71, 36, 81, 62, 65, 11,\n",
+       "        24, 30, 68,  5, 48, 96,  8, 10])]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_test_split(a) # first array is training, second is testing, the arrays are shuffled"
+    "train_test_split(a)\n",
+    "# the 2 arrays are shuffled together, the first array is training, second is testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "a_train, a_test, b_train, b_test = train_test_split(a, b, test_size=0.2, random_state=42)\n",
     "\n",
     "\n",
-    "\n",
     "# testing will be 20% as we have indicated this in 'test_size' as 0.2\n",
-    "# the default setting for shuffle is true as that is usually what we want\n",
-    "# however it can be turned off using 'suffle=False' in the parenthesis\n",
     "# a different shuffle every time the code is run would prevent an objective assessment of the changes\n",
     "# using the 'random_state=42'allows you to have the same shuffled data every time! (doesn't need to be 42 specifically)"
    ]
@@ -125,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -134,18 +148,19 @@
        "((80,), (20,))"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a_train.shape, a_test.shape # the default split for 'train_test_split' is 75% Training and 25% testing"
+    "a_train.shape, a_test.shape\n",
+    "# the default split for 'train_test_split' is 75% Training and 25% testing, but we set it to 80% and 20% above"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +175,7 @@
        "        93,  52])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +196,7 @@
        "       78, 13, 32])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +216,7 @@
        "((80,), (20,))"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -227,18 +242,22 @@
        "       593, 552])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b_train"
+    "b_train\n",
+    "# each element from a_train and b_train have been shuffled in the same way\n",
+    "# e.g. the 9th position of b_train (510) matches the 9th position in a_train (10)\n",
+    "# as they were in the same position before shuffling\n",
+    "# this is important as we want an observations input to match with it's target"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +267,7 @@
        "       534, 591, 505, 577, 578, 513, 532])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
